<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/icon_library"
        android:title="@string/title_tab_library"
        />

    <item
        android:id="@+id/navigation_anki"
        android:icon="@drawable/iconanki"
        android:title="@string/title_tab_anki" />
    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/iconadd"
        android:title="@string/title_tab_create"/>

    <item
        android:id="@+id/navigation_planner"
        android:icon="@drawable/iconplanner"
        android:title="@string/title_tab_planner" />
    <item
        android:id="@+id/navigation_data"
        android:icon="@drawable/icondata"
        android:title="@string/title_tab_data" />

</menu>