<?xml version="1.0" encoding="utf-8"?>




<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"

    android:id="@+id/base_container">

    <ImageView
        android:id="@+id/btn_select"
        android:contentDescription="@string/btn_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/scroll_view_main"
        app:layout_constraintEnd_toStartOf="@+id/scroll_view_main"

        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/select_rv_item"
        android:layout_marginEnd="5dp"
        android:visibility="gone"

        />



    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
        app:layout_constraintStart_toEndOf="@+id/btn_select"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
        <include
            layout="@layout/library_frag_rv_item_card_string"/>






    </androidx.core.widget.NestedScrollView>


    <ImageView
        android:contentDescription="@string/btn_edit"
        android:tag="@string/gone_on_long_click"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/btn_edit_whole"
        android:src="@drawable/icon_edit"
        app:layout_constraintEnd_toEndOf="@id/btn_delete"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete"
        app:layout_constraintStart_toStartOf="@+id/btn_delete"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>


    <ImageView
        android:contentDescription="@string/delete"
        android:tag="@string/gone_on_long_click"
        app:layout_constraintStart_toEndOf="@+id/scroll_view_main"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_whole"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/scroll_view_main"
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/icon_trash"
        android:visibility="gone"
        />







    <ImageView
        android:contentDescription="@string/add_new_card"
        android:tag="@string/gone_on_long_click"
        android:id="@+id/btn_add_new_card"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/scroll_view_main"
        app:layout_constraintTop_toBottomOf="@id/scroll_view_main"
        android:layout_height="20dp"
        android:layout_margin="3dp"
        android:layout_width="20dp"
        android:src="@drawable/icon_add"
        android:visibility="visible"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



