<?xml version="1.0" encoding="utf-8"?>
<!--TODO:Rename View Ids In Rules-->
<!--TODO:Rename String res In Rules-->
<!--TODO:Rename included Layout titles in Rules-->
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/TopBarLinLayStyle"
    android:layout_width="match_parent"
    android:layout_height="@dimen/topBar_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:gravity="center_vertical">
    <ImageView
        android:contentDescription="@string/cd_btn_back"
        android:id="@+id/imv_back"
        style="@style/TopBarButtonStyle"
        android:src="@drawable/icon_back"
        app:tint="@color/most_dark_gray"/>

    <ImageView
        android:contentDescription="@string/cd_flip_mode"
        android:layout_width="40dp"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_tab_anki"
        android:layout_marginEnd="20dp" />

    <TextView
        style="@style/TopBarTxvSizeNormalStyle"
        android:id="@+id/txv_card_position"
        android:gravity="center_vertical"
        android:layout_weight="22"
        >
    </TextView>
    
    <ImageView
        android:contentDescription="@string/cd_show_flip_list"
        style="@style/TopBarButtonStyle"
        android:layout_marginStart="10dp"
        android:id="@+id/btn_flip_item_list"
        app:tint="@color/most_dark_gray"
        android:src="@drawable/icon_list"/>






</androidx.appcompat.widget.LinearLayoutCompat>