<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragmentLibrary">

    <fragment
        android:id="@+id/fragmentLibrary"
        android:name="com.example.tangochoupdated.ui.library.HomeFragment"
        android:label="library"
        tools:layout="@layout/fragment_library_home" >




        <argument
        android:name="parentItemId"
        app:argType="integer[]"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/library_to_library"
            app:destination="@id/fragmentLibrary">

        </action>
    </fragment>



    <fragment
        android:id="@+id/navigation_anki"
        android:name="com.example.tangochoupdated.ui.anki.AnkiFragment"
        android:label="anki"

        tools:layout="@layout/fragment_anki_home" />
    <action
        android:id="@+id/to_lib"
        app:popUpTo="@id/mobile_navigation"
        app:destination="@+id/fragmentLibrary"/>
    <action
    android:id="@+id/to_anki"
    app:popUpTo="@id/mobile_navigation"
    app:destination="@+id/navigation_anki"/>
    <action
        android:id="@+id/to_create"
        app:destination="@+id/navigation_create"/>




    <fragment
        android:id="@+id/navigation_planner"
        android:name="com.example.tangochoupdated.ui.planner.PlannerFragment"
        android:label="@string/title_tab_planner"
        tools:layout="@layout/fragment_planner_home" />
    <fragment
        android:id="@+id/navigation_data"
        android:name="com.example.tangochoupdated.ui.data.DataFragment"
        android:label="@string/title_tab_data"
        tools:layout="@layout/fragment_data_home" />
    <fragment
        android:id="@+id/navigation_create"
        android:name="com.example.tangochoupdated.ui.planner.CreateFragment"
        android:label="@string/title_tab_create"
        tools:layout="@layout/fragment_create"/>
</navigation>