<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    android:orientation="vertical">






    <ImageView
        tools:ignore="contentDescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txv_marker"
        app:layout_constraintStart_toEndOf="@id/imv_icon_marker"

        android:id="@+id/line_vertical"
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:src="@drawable/rectangle_line"/>

    <ImageView
        android:contentDescription="@string/icon_marker"
        android:id="@+id/imv_icon_marker"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:src="@drawable/icon_marker_color"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/line_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:contentDescription="@string/marker_text"
        android:id="@+id/txv_marker"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:textColor="@color/text_color_gray"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@id/line_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:contentDescription="@string/edit_marker_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="5dp"
        android:id="@+id/btn_edit_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_edit_cover"/>






























</androidx.constraintlayout.widget.ConstraintLayout>